[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Balls/BaseBallController.gd" type="Script" id=1]
[ext_resource path="res://Assets/Balls/ball-white-bg.png" type="Texture" id=2]
[ext_resource path="res://Assets/Themes/BallFontTheme.tres" type="Theme" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="Animation" id=2]
resource_name = "Merge"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375 ),
"transitions": PoolRealArray( 1.56917, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 0.9 ), Vector2( 0.9, 1.1 ), Vector2( 1.05, 0.95 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="BaseBall" type="RigidBody2D"]
input_pickable = true
gravity_scale = 7.0
can_sleep = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
scale = Vector2( 0.45, 0.45 )
shape = SubResource( 1 )

[node name="CircleSprite" type="Sprite" parent="CollisionShape"]
texture = ExtResource( 2 )

[node name="ValueLabel" type="Label" parent="CollisionShape"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 64, 64 )
theme = ExtResource( 3 )
text = "128"
align = 1
valign = 1
max_lines_visible = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Merge = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_BaseBall_mouse_entered"]
